# chatggq-llama-jni-builder

.github/workflows/: build.yml
cpp/: CMakeLists.txt  llama_jni.cpp
